--- a/beauty-finder/src/Pages/MyAccount.css
+++ b/beauty-finder/src/Pages/MyAccount.css
@@ -1,30 +1,58 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+
 .my-account-container {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    font-weight: 1000;
     display: flex;
     padding:  30px 120px; /* Adjust padding as needed */
     margin-top: 100px;
 }
 
 .sidebar {
-    width: 20%;
-    background-color: #f0f0f0;
-    padding: 10px;
+    width: 25%;
+    height: 30%;
+    background-color: white;
+    padding: 10px 10px 10px 0;
+    border-radius: 5px;
+    flex-shrink: 0; 
 }
 
 .sidebar-item {
     cursor: pointer;
     padding: 10px;
     margin-bottom: 10px;
-    border-radius: 5px;
+    /* border-radius: 5px; */
+    text-align: left;
+    transition: all 0.3s ease;
     &:hover {
         background-color: #ddd;
+        margin-left:12px;
+        border-radius:3px;
+        /* color:red; */
     }
 }
 
+
 .sidebar-item.active {
-    background-color: #bbb;
+    border-left: 4px solid #fba344; 
+    padding-left: 12px; 
 }
 
 .main-panel {
     flex: 1;
     padding: 0 20px; /* Adjust padding as needed */
 }
+
+.appointment-container{
+    background-color: white;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+    padding: 20px;
+    margin-bottom: 30px;
+}
+
+
