--- a/beauty-finder/src/Components/SignIn.css
+++ b/beauty-finder/src/Components/SignIn.css
@@ -1,4 +1,4 @@
-.signup-popup {
+.signin-popup {
     position: fixed;
     top: 0;
     left: 0;
@@ -11,7 +11,7 @@
     align-items: center;
 }
 
-.signup-content {
+.signin-content {
     background: white;
     width: 90%;
     max-width: 500px;
@@ -24,15 +24,15 @@
     position: relative;
 }
 
-.signup-content h2{
-    color:black;
+.signin-content h2{
+    color: #273f56;
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
 }
 
-.custom-signup-form {
+.custom-signin-form {
     /* font-family: 'Montserrat', sans-serif; */
-    font-weight: 1000;
+    font-weight: 500;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -42,7 +42,7 @@
     padding: 20px;
 }
 
-.custom-signup-form-field {
+.custom-signin-form-field {
     margin-bottom: 2%; 
 }
 
@@ -51,18 +51,12 @@
     width: calc(100% - 30px); /* Adjust the width and padding as needed */
     /* padding-right: 30px;  */
     margin-bottom: 20px;
-    /* border: 1px solid rgb(116, 115, 115); */
-    border-radius: 5px;
 }
-
-.custom-input-field::placeholder {
-    color: black; /* Set the placeholder text color */
-  }
 
 .eye-icon {
     position: absolute;
     top: 50%;
-    right: 5px; 
+    right: 5px; /* Adjust the right position as needed */
     transform: translateY(-50%);
     cursor: pointer;
     color: #888;
@@ -85,12 +79,52 @@
     color: #000000;
 }
 
-.custom-alternative-signin {
+.custom-reset-pass{
+    font-family: 'Poppins', sans-serif;
+    font-size: small;
+    font-weight: 400;
+    color: #00b4d8;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    max-width: 500px;
+    padding: 10px;
+    cursor: pointer;
+    transition: 'background-color 0.3s, color 0.3s';
+}
+
+.custom-reset-pass:hover{
+    color: #00a2d8;
+    text-decoration: underline;
+    cursor: pointer;
+    transition: 'background-color 0.3s, color 0.3s';
+}
+
+/* .custom-alternative-signup{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 1000;
+    font-size: 15px;
+    color: #273f56;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    max-width: 500px;
+    padding: 10px;
+    cursor: pointer;
+    transition: 'background-color 0.3s, color 0.3s';
+} */
+
+.custom-alternative-signup {
     display: flex;
     align-items: center; 
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
     font-size: 15px;
+    color: #273f56;
     align-items: center;
     justify-content: center;
     margin: auto;
@@ -100,13 +134,13 @@
     transition: 'background-color 0.3s, color 0.3s';
   }
   
-  .custom-signin-link {
+  .custom-signup-link {
     margin-left: 5px; /* Adjust the margin as needed for spacing between the text */
     color: #00b4d8;
     cursor: pointer;
   }
 
-  .custom-signin-link:hover {
+  .custom-signup-link:hover {
     margin-left: 5px; /* Adjust the margin as needed for spacing between the text */
     color: #00a2d8;
     text-decoration: underline;
