--- a/beauty-finder/src/Pages/Home.css
+++ b/beauty-finder/src/Pages/Home.css
@@ -1,75 +1,83 @@
-/* Background Image Container Styles */
-.background-image-container {
-    position: relative;
-    width: 100%;
-    height: 100vh; /* Adjust the height as needed */
-    overflow: hidden;
-  }
-  
-  .background-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1; /* Place the image behind other elements */
-  }
+.background-container {
+  background-color: #cfeef4;
+  font-family: 'Popins', sans-serif;
+  min-height: 150vh;
+  color: black;
+  display: flex;
+  /* Use flexbox to arrange the children side by side */
+  padding: 30px;
+  margin-top: 75px;
+}
+
+.home-title-container {
+  text-decoration: none;
+  margin-bottom: 2%;
+  margin-top: 75px;
+  width: 55%;
+  text-align: left;
+  padding-top: 0px;
+  padding-left: 50px;
+}
+
+.home-title-container h1 {
+  font-family: 'Popins', sans-serif;
+  font-size: 50px;
+  font-weight: 400;
+  padding-top: 0px;
+}
+
+.home-image-container {
+  width: 40%;
+  margin-left: 20px;
+  margin-right: 30px;
+  margin-top: 20px;
+}
+
+.home-image {
+  width: 100%;
+  border-radius: 55% 55% 55% 55%;
+}
 
 .scheduling-container {
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    width:50%;
-    height: 65%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    opacity: 0.95;
-    padding: 20px; /* Adjust padding as needed */
-    border-radius: 10px; /* Add border-radius for rounded corners */
-    z-index: 1; /* Place the container above the background image */
-  }
+  background-color: white;
+  width: 85%;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  opacity: 0.7;
+}
 
-  .scheduling-container-title{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 19px;
-    color: #42190a;
-    text-decoration: none;
-    margin-bottom: 2%;
-    margin-top: 1%;
-    display: flex;
-    justify-content: center; /* Center the content horizontally */
-    align-items: center; /* Center the content vertically */
-  }
-  
-  .segment-header {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 100%;
-  }
-  
-  
-  .segment-header button {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
-    padding: 10px;
-    margin: 5px;
-    background-color: #c45e35;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    width: 100%;
-    cursor: pointer;
-  }
-  
-  .segment-header button:hover{
-    background-image: linear-gradient(to right, #97492a, #72341c); /* Adjust the colors as needed */
-    transition: background-image 0.5s ease; /* Adjust the duration (0.5s in this example) and easing function as needed */
-  }
-  
-  .segment-header button.active {
-    background-image: linear-gradient(to right, #97492a, #72341c); /* Adjust the colors as needed */
-    transition: background-image 0.5s ease; /* Adjust the duration (0.5s in this example) and easing function as needed */
-  }
-  
+.scheduling-container-header {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+}
+
+.scheduling-container-header button{
+  font-family: 'Poppins', sans-serif;
+  font-size: 15px;
+  padding: 7px;
+  /* margin: 5px; */
+  background-color: #90e0ef;
+  color: black;
+  font-weight: 500;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width:32%;
+  transition: background-color 0.3s ease;
+  /* transition: color 0.2s ease; */
+}
+
+.scheduling-container-header button:hover {
+  background-color: #00b4d8;
+  color: white;
+}
+
+
+.scheduling-container-header button.active {
+  background-color: #00b4d8;
+  color: white;
+}
+
