--- a/beauty-finder/src/Pages/ServicesForm.css
+++ b/beauty-finder/src/Pages/ServicesForm.css
@@ -1,31 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 
-/* .services-form {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 1000;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: auto;
-  margin-top: 3%;
-  max-width: 500px;
-  padding: 20px;
-  border-radius: 5px;
-  background-color: white;
-  box-shadow: 0 0 10px rgba(119, 53, 15, 0.2);
-} */
 
 .custom-form {
-  width:98%;
-  padding: 20px;
+  font-family: 'Poppins', sans-serif;
+  width:100%;
+  padding-top: 20px;
   margin: auto;
   margin-top:2%;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 1000;
+  font-weight: 500;
   border-radius: 5px;
-  background-color: white;
-  box-shadow: 0 0 10px rgba(119, 53, 15, 0.2);
 }
 
 .custom-form-field {
@@ -64,5 +47,29 @@
   border: 1px solid #9b9998;
 }
 
+p{
+  /* margin-bottom: 0px; */
+  /* margin-top: 0px; */
+  font-size: 13px;
+  font-weight: 700;
+  padding: 0px;
+}
 
+
+.see-all-salons-button {
+  width: 30%;
+  display: flex;
+  background-color: #00b4d8;
+  border-radius: 7px;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Montserrat';
+  transition: background-color 0.3s;
+  color: white;
+  margin-top: 10px; /* Adjust this value as needed */
+}
+
+.see-all-salons-button:hover {
+  background-color: #00b4d8;
+}
 
