--- a/beauty-finder/src/Pages/Catalog.css
+++ b/beauty-finder/src/Pages/Catalog.css
@@ -5,6 +5,7 @@
   padding: 20px;
   margin: 75px; /* Adjust margin as needed */
   background-color: #f0f0f0;
+  color:black;
 }
 
 /* Style for the header text */
